--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,7 +1,7 @@
 ====================================================================================================
  »» The Fusion Project ««
  Copyright (c) 2004, Cobax Information Systems
- http://fusion.cobax.net/
+ http:\\fusion.cobax.net\
 ----------------------------------------------------------------------------------------------------
  Scripts Change Logs
 ====================================================================================================
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Mob\dungeon\beach_dun.txt - Updated, reorganised Comodo Dungeon Monster Spawns. [Muad_Dib]
+- Mob\dungeon\gef_dun.txt - Updated, reorganised Geffen Tower Dungeon Monster Spawns. [Muad_Dib]
 - Town\Town_Gonryun.txt - Added 1st version of Town Gonryun untill i get a more updated translation. [Muad_Dib]
 - Town\Town_Kafra.txt - Rolled back nestor's changes. [Tsusai]
 - Shop\Gonryun.txt - Translated the shop names. [Muad_Dib]
