--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Mob\other\xmas_mob.txt - Added Xmass monsters mob file. [Muad_Dib]
+- Event\Event_Sign.txt - Removed Event_Sign cuase i found some new stuff that was totally different. [Tsusai]
 - Mob\dungeon\ama_dun.txt - Updated, reorganised Amatsu Dungeon Monster Spawns. [Muad_Dib]
 - Mob\dungeon\gon_dun.txt - Updated, reorganised Gon Ryun Dungeon Monster Spawns. [Muad_Dib]
 - Mob\field\ama_fild.txt - Updated, reorganised Amatsu Field Monster Spawns. [Muad_Dib]
