*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1946 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -10,7 +10,7 @@
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
 - Mob\other\job_quests.txt- Updated, reorganised Job Quests Monster Spawns. [Muad_Dib]
-- Mob\other\pvp_n.txt- Updated, reorganised Pvp Room Monster Spawns. [Muad_Dib]
+- Mob\other\pvp_n.txt- Reorganised Pvp Room Monster Spawns. [Muad_Dib]
 - Mob\other\xmas_town.txt- Updated, reorganised Lutie Town Monster Spawns. [Muad_Dib]
 - Mob\other\xmas_mob.txt - Added Xmass monsters mob file. [Muad_Dib]
 - Event\Event_Sign.txt - Removed Event_Sign cuase i found some new stuff that was totally different. [Tsusai]
