--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,9 +9,12 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
-- Mob\other\job_quests.txt- Updated, reorganised Job Quests Monster Spawns. [Muad_Dib]
-- Mob\other\pvp_n.txt- Reorganised Pvp Room Monster Spawns. [Muad_Dib]
-- Mob\other\xmas_town.txt- Updated, reorganised Lutie Town Monster Spawns. [Muad_Dib]
+- Mob\dungeon\treasure_dun.txt - Updated, reorganised Sunken Ship Monster Spawns. [Muad_Dib]
+- Mob\dungeon\um_dun.txt - Updated, reorganised Umbala Dungeon Monster Spawns. [Muad_Dib]
+- Mob\dungeon\xmas_dun.txt - Updated, reorganised Toy Factory Monster Spawns. [Muad_Dib]
+- Mob\other\job_quests.txt - Updated, reorganised Job Quests Monster Spawns. [Muad_Dib]
+- Mob\other\pvp_n.txt - Reorganised Pvp Room Monster Spawns. [Muad_Dib]
+- Mob\other\xmas_town.txt - Updated, reorganised Lutie Town Monster Spawns. [Muad_Dib]
 - Mob\other\xmas_mob.txt - Added Xmass monsters mob file. [Muad_Dib]
 - Event\Event_Sign.txt - Removed Event_Sign cuase i found some new stuff that was totally different. [Tsusai]
 - Mob\dungeon\ama_dun.txt - Updated, reorganised Amatsu Dungeon Monster Spawns. [Muad_Dib]
