--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Mob\dungeon\prt_sewb_dun.txt - Updated, Prontera Sewers Monster Spawns. [Muad_Dib]
 - Mob\dungeon\orcs_dun.txt - Updated, reorganised Orc Dungeon Monster Spawns. [Muad_Dib]
 - Mob\dungeon\treasure_dun.txt - Updated, reorganised Sunken Ship Monster Spawns. [Muad_Dib]
 - Mob\dungeon\um_dun.txt - Updated, reorganised Umbala Dungeon Monster Spawns. [Muad_Dib]
