--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Mob\dungeon\lou_dun.txt. - Edited the spawns [Muad_Dib]
+- Mob\field\lou_fild.txt . - Edited the spawns [Muad_Dib]
 - Mob\dungeon\gl_dun.txt - Updated, Glastheim Monster Spawns. [Muad_Dib]
 - Mob\dungeon\moc_pryd_dun.txt - Updated, Pyramids Monster Spawns. [Muad_Dib]
 - Mob\other\yggdrasil_mob.txt - Added Yggdrasil01 Monster Spawns. [Muad_Dib]
