*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1954 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Kafra.txt - Added Gonryun kafra. [Muad_Dib]
 - Mob\dungeon\lou_dun.txt. - Edited the spawns [Muad_Dib]
 - Mob\field\lou_fild.txt . - Edited the spawns [Muad_Dib]
 - Mob\dungeon\gl_dun.txt - Updated, Glastheim Monster Spawns. [Muad_Dib]
