*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1957 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Amatsu.txt - Changed one part of the text. [Muad_Dib]
 - Town\Town_Kafra.txt - Commented out Umbala Kafra's Teleport. [Tsusai]
 - Changelog.txt - Updated links at the footer. [Tsusai]
 - Town\Town_Kafra.txt - Updated Amatsu Kafras. [Tsusai]
