4-10-2004 <warp\\towns\\izlude.txt> - remove warp going to test guide.
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1962 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- warp\towns\izlude.txt - remove warp going to test guide.
 - Job\Job2_Knight_quest5.txt - Fixed bad NPC IDs for hidden script loaders. [Tsusai]
 - Quest\quest_arena_test.txt - Fixed bad NPC IDs for hidden script loaders. [Tsusai]
 - GvG\npc_guardiankafra.txt - Fixed bad NPC IDs for hidden script loaders. [Tsusai]
