*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1964 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Morocc.txt - Updated Morocc header. [Muad_Dib]
+- GvG\ - Changed all flag texts. [Muad_Dib]
 - warp\towns\alberta.txt - change warp output location. [nestor_zulueta]
 - warp\towns\izlude.txt - remove warp going to test guide. [nestor_zulueta]
 - Job\Job2_Knight_quest5.txt - Fixed bad NPC IDs for hidden script loaders. [Tsusai]
