*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1969 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Kafra.txt - Changed a few kafra faceing positions. [Muad_Dib]
 - Job\Job2_Knight_quest5.txt - Removed do to incompleteness and bugs (will be replaced). [Tsusai]
 - Town\Town_Kafra.txt - Changed 2 kafra locations. [Muad_Dib]
 - Quest\quest_arena_test.txt - Set hidden npc id's to -1 for functionality (away from user so they won't crash). [Tsusai]
