--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- GvG\aldeg_cas02.txt - Corrected label check error. [Tsusai]
 - Town\Town_Kafra.txt - Changed a few kafra faceing positions. [Muad_Dib]
 - Job\Job2_Knight_quest5.txt - Removed do to incompleteness and bugs (will be replaced). [Tsusai]
 - Town\Town_Kafra.txt - Changed 2 kafra locations. [Muad_Dib]
