- Town\\Town_Kafra.txt - Corrected Amatsu Kafra menu labels. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1971 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Kafra.txt - Corrected Amatsu Kafra menu labels. [Tsusai]
 - GvG\aldeg_cas02.txt - Corrected label check error. [Tsusai]
 - Town\Town_Kafra.txt - Changed a few kafra faceing positions. [Muad_Dib]
 - Job\Job2_Knight_quest5.txt - Removed do to incompleteness and bugs (will be replaced). [Tsusai]
