*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1972 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- shop\umbala.txt - Fixed weapons dealer price. [Muad_Dib]
 - Town\Town_Kafra.txt - Corrected Amatsu Kafra menu labels. [Tsusai]
 - GvG\aldeg_cas02.txt - Corrected label check error. [Tsusai]
 - Town\Town_Kafra.txt - Changed a few kafra faceing positions. [Muad_Dib]
