--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Mob\ - Edited/corrected some spawns. [Muad_Dib]
+- Mob\dungeon\pay_dun.txt - Redid the payon Dungeon Spawns. [Muad_Dib]
 - Town\Town_Gonryun.txt - Corrected warp destination error back to Alberta. [Tsusai]
 - shop\umbala.txt - Fixed weapons dealer price. [Muad_Dib]
 - Town\Town_Kafra.txt - Corrected Amatsu Kafra menu labels. [Tsusai]
