*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1975 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Gonryun.txt - Reorganised Town Lutie. [Muad_Dib]
 - Mob\ - Edited/corrected some spawns. [Muad_Dib]
 - Mob\dungeon\pay_dun.txt - Redid the payon Dungeon Spawns. [Muad_Dib]
 - Town\Town_Gonryun.txt - Corrected warp destination error back to Alberta. [Tsusai]
