*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1981 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Job\Job_Newbie.txt - Reorganised Job_Newbie. [Muad_Dib]
 - Town\Town_Kafra.txt - Changed a Louyang kafra option. [Muad_Dib]
 - shop\louyang.txt - Added louyang shops. [Muad_Dib]
 - shop\comodo.txt - Added extra shop. [Muad_Dib]
