--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Whiteday.txt - added nestor zuleta's event_whiteday. [Muad_Dib]
 - Mob\dungeon\gef_dun.txt - Fixed a spawn that crashed server. [Muad_Dib]
 - Warp\town\Louyang.txt - Corrected a warp. [Muad_Dib]
 - Job\Job_Newbie.txt - Reorganised Job_Newbie. [Muad_Dib]
