- Job\\Job2_Knight.txt - Moved To Archive. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1986 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Job\Job2_Knight.txt - Moved To Archive. [Tsusai]
 - Event\Event_Whiteday.txt - changed  a few language errors. [Muad_Dib]
 - Event\Event_Whiteday.txt - added nestor zuleta's event_whiteday. [Muad_Dib]
 - Mob\dungeon\gef_dun.txt - Fixed a spawn that crashed server. [Muad_Dib]
