--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Job\Job2_Knight.txt - Added official quest with unofficial workarounds for stability. [Tsusai]
 - Job\Job2_Knight.txt - Moved To Archive. [Tsusai]
 - Event\Event_Whiteday.txt - changed  a few language errors. [Muad_Dib]
 - Event\Event_Whiteday.txt - added nestor zuleta's event_whiteday. [Muad_Dib]
