- Warp\\dungeons\\gl_prison.txt - Added missing random warp. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1989 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Warp\dungeons\gl_prison.txt - Added missing random warp. [Tsusai]
 - Event\Event_Dye.txt - Addeda missing } that crashed the server. [Muad_Dib]
 - Job\Job2_Knight.txt - Added official quest with unofficial workarounds for stability. [Tsusai]
 - Job\Job2_Knight.txt - Moved To Archive. [Tsusai]
