--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Alberta.txt - Added Babygirl NPC. [Tsusai]
 - Town\Town_Prontera.txt - Added Hensen and Garnet. [Tsusai]
 - Town\Town_Prontera.txt - Removed commented duplicate of Nenkaras Inn. [Tsusai]
 - Warp\dungeons\gl_prison.txt - Fixed a rangecheck error that made it crash. [Muad_Dib]
